--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,16 +13,17 @@
     "@hookform/resolvers": "^3.3.4",
     "@supabase/supabase-js": "^2.39.3",
     "date-fns": "^3.3.1",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.344.0",
+    "nodemailer": "^6.9.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.50.1",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.2",
     "recharts": "^2.12.1",
-    "zod": "^3.22.4",
     "twilio": "^4.22.0",
-    "nodemailer": "^6.9.11",
-    "react-hot-toast": "^2.4.1"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
